# survival-trees

./: .gitignore  .gitlab-ci.yaml  README.md  build.sh  pyproject.toml
.github/workflows/: release.yml
benchmarks/: bench_fit_predict.py  bench_perf.py  benchmark.csv  benchmark.py  synthetic.py
docs/source/: conf.py  index.rst  modules.rst  survival_trees.rst  survival_trees.tools.rst
docs/superpowers/specs/: 2026-04-21-replace-r-with-rust-backend-design.md
public/: benchmark.md  benchmark_cindex.md
rust/survival_trees_rs/: Cargo.toml
rust/survival_trees_rs/src/: km.rs  split.rs  tree.rs
src/rust/survival_trees_rs/: Cargo.toml
src/rust/survival_trees_rs/src/: forest.rs  km.rs  lib.rs  split.rs  tree.rs  types.rs
src/survival_trees/: __init__.py  _base.py  _common.py  _fitters.py  _lazy.py  _rust_base.py  metric.py  plotting.py
src/survival_trees/tools/: estimators.py  execution.py  utils.py
survival_trees/: _base.py  _common.py  _rust_base.py
tests/: conftest.py  test_metric.py  test_restimator.py  test_rust_backend.py
tests/bench/: bench_fit_predict.py
