[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "survival_trees"
version = "0.0.10"
description = "Python survival trees (LTRC tree + forest) with Rust backend"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Vincent LAURENT", email = "vlaurent@eurobios.com" },
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "lifelines",
    "rpy2",
    "memory_profiler",
    "pyqt5",
    "plotly==5.10",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/eurobios-scb/survival-trees"

[tool.maturin]
manifest-path = "rust/survival_trees_rs/Cargo.toml"
python-source = "."
module-name = "survival_trees._rust"
features = ["pyo3/extension-module", "pyo3/abi3-py39"]
include = [
    "survival_trees/*.R",
]
