[package]
name = "survival_trees_rs"
version = "0.0.10"
edition = "2021"
rust-version = "1.74"

[lib]
name = "survival_trees_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
